Add reset.css, for further uniformity

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Diwata</title>
     <meta name="description" content="diwata web client">
+    <link rel="stylesheet" href="static/reset.css">
     <link rel="stylesheet" href="static/css/ionicons-2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="static/css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="static/css/animate.min.css">
