don't allow phones to scale

--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Diwata</title>
     <meta name="description" content="diwata web client">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="static/reset.css">
     <link rel="stylesheet" href="static/css/ionicons-2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="static/css/font-awesome-4.7.0/css/font-awesome.min.css">
